--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.16 Sun Jun 22 16:45:22 EDT 2003
+	- added optimization flags to REs.
+
 0.15 Thu Jun 19 12:02:30 EDT 2003
 	- package renamed Convert::Number::Ethiopic.
 	- /...$/ changed to /...\b/ to work around perl 5.8.0 problem.
